feat: add custom LP's rendering inside token selector

--- a/packages/uniswap/tsconfig.json
+++ b/packages/uniswap/tsconfig.json
@@ -5,7 +5,8 @@
     "src/**/*.d.ts",
     "src/**/*.tsx",
     "src/**/*.json",
-    "src/**/*.mts"
+    "src/**/*.mts",
+    "../../apps/web/src/pages/Unicorn/queries/**/*",
   ],
   "references": [
     {
