feat: start using mock data for tokens and LPs

--- a/packages/uniswap/tsconfig.json
+++ b/packages/uniswap/tsconfig.json
@@ -7,6 +7,7 @@
     "src/**/*.json",
     "src/**/*.mts",
     "../../apps/web/src/pages/Unicorn/queries/**/*",
+    "../../apps/web/src/pages/Unicorn/mocks/**/*",
   ],
   "references": [
     {
