--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -194,6 +194,8 @@
     "@looksrare/sdk": "0.10.4",
     "@opensea/seaport-js": "1.3.0",
     "@popperjs/core": "2.11.8",
+    "@pwndao/sdk-v1-react": "0.0.2-rc.15",
+    "@pwndao/v1-core": "0.0.2-rc.15",
     "@reach/dialog": "0.10.5",
     "@reach/portal": "0.10.5",
     "@reduxjs/toolkit": "1.9.3",
@@ -303,7 +305,7 @@
     "utilities": "workspace:^",
     "uuid": "9.0.0",
     "video-extensions": "1.2.0",
-    "viem": "2.x",
+    "viem": "2.31.3",
     "wagmi": "2.9.3",
     "wcag-contrast": "3.0.0",
     "web-vitals": "2.1.4",
