deps: go back to old sdk version until upstream merge

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -194,8 +194,9 @@
     "@looksrare/sdk": "0.10.4",
     "@opensea/seaport-js": "1.3.0",
     "@popperjs/core": "2.11.8",
-    "@pwndao/sdk-v1-react": "0.0.2-rc.15",
-    "@pwndao/v1-core": "0.0.2-rc.15",
+    "@pwndao/sdk-core": "0.0.2-rc",
+    "@pwndao/sdk-v1-react": "0.0.2-rc",
+    "@pwndao/v1-core": "0.0.2-rc",
     "@reach/dialog": "0.10.5",
     "@reach/portal": "0.10.5",
     "@reduxjs/toolkit": "1.9.3",
